cambio de sapui table con boton de edicion

--- a/webapp/view/Home.view.xml
+++ b/webapp/view/Home.view.xml
@@ -1,4 +1,4 @@
-<mvc:View  controllerName="sap.ui.demo.walkthrough.controller.Home"
+<mvc:View  controllerName="cbc.co.simulador_costos.controller.Home"
 	xmlns:l="sap.ui.layout" xmlns:mvc="sap.ui.core.mvc" xmlns="sap.m" 	xmlns:f="sap.ui.layout.form">
 
 	<Panel id="containerLayout"
