--- a/webapp/view/App.view.xml
+++ b/webapp/view/App.view.xml
@@ -1,7 +1,7 @@
 <mvc:View
-	controllerName="sap.ui.demo.walkthrough.controller.App"
+	controllerName="cbc.co.simulador_costos.controller.App"
 	xmlns="sap.m"
 	xmlns:mvc="sap.ui.core.mvc"
 	displayBlock="true">
-	<mvc:XMLView viewName="sap.ui.demo.walkthrough.view.ShellBarWithSplitApp"/>
+	<mvc:XMLView viewName="cbc.co.simulador_costos.view.ShellBarWithSplitApp"/>
 </mvc:View>
