--- a/webapp/view/ShellBarWithSplitApp.view.xml
+++ b/webapp/view/ShellBarWithSplitApp.view.xml
@@ -1,10 +1,10 @@
 <mvc:View id="sbwsa1" height="100%" xmlns:mvc="sap.ui.core.mvc" xmlns="sap.m" xmlns:f="sap.f" xmlns:tnt="sap.tnt"
 	xmlns:html="http://www.w3.org/1999/xhtml" xmlns:app="http://schemas.sap.com/sapui5/extension/sap.ui.core.CustomData/1"
 	controllerName="cbc.co.simulador_costos.controller.ShellBarWithSplitApp" xmlns:u="sap.ui.unified">
-	<u:Shell id="myShell" icon="../webapp/css/images/cbc-logo.png">
+	<!--<u:Shell id="myShell" icon="../webapp/css/images/cbc-logo.png">
 		<u:headItems>
 			<u:ShellHeadItem tooltip="Configuration" icon="sap-icon://menu2" press="handlePressConfiguration"/>
-			<!--<u:ShellHeadItem tooltip="Home" icon="../webapp/css/images/cbc-logo.png" visible="true" press="handlePressHome"/>-->
+			<u:ShellHeadItem tooltip="Home" icon="../webapp/css/images/cbc-logo.png" visible="true" press="handlePressHome"/>
 		</u:headItems>
 		<u:user>
 			<u:ShellHeadUserItem image="sap-icon://person-placeholder" username="Fernando Molina" press="handleUserItemPressed"/>
@@ -12,7 +12,7 @@
 		<u:paneContent>
 			<Text text="Lorem ipsum"/>
 		</u:paneContent>
-	</u:Shell>
+	</u:Shell>-->
 	<tnt:ToolPage id="toolPage">
 		<!--<tnt:header>
 			<tnt:ToolHeader>
