--- a/webapp/view/ShellBarWithSplitApp.view.xml
+++ b/webapp/view/ShellBarWithSplitApp.view.xml
@@ -1,35 +1,21 @@
 <mvc:View id="sbwsa1" height="100%" xmlns:mvc="sap.ui.core.mvc" xmlns="sap.m" xmlns:f="sap.f" xmlns:tnt="sap.tnt"
 	xmlns:html="http://www.w3.org/1999/xhtml" xmlns:app="http://schemas.sap.com/sapui5/extension/sap.ui.core.CustomData/1"
 	controllerName="cbc.co.simulador_costos.controller.ShellBarWithSplitApp" xmlns:u="sap.ui.unified">
-	<u:Shell id="myShell" icon="../webapp/css/images/cbc-logo.png">
-		<u:headItems>
-			<u:ShellHeadItem tooltip="Configuration" icon="sap-icon://menu2" press="handlePressConfiguration"/>
+	<!--<u:Shell id="myShell" icon="../webapp/css/images/cbc-logo.png">-->
+	<!--	<u:headItems>-->
+	<!--		<u:ShellHeadItem tooltip="Configuration" icon="sap-icon://menu2" press="handlePressConfiguration"/>-->
 			<!--<u:ShellHeadItem tooltip="Home" icon="../webapp/css/images/cbc-logo.png" visible="true" press="handlePressHome"/>-->
-		</u:headItems>
-		<u:user>
-			<u:ShellHeadUserItem image="sap-icon://person-placeholder" username="Fernando Molina" press="handleUserItemPressed"/>
-		</u:user>
-		<u:paneContent>
-			<Text text="Lorem ipsum"/>
-		</u:paneContent>
-	</u:Shell>
+	<!--	</u:headItems>-->
+	<!--	<u:user>-->
+	<!--		<u:ShellHeadUserItem image="sap-icon://person-placeholder" username="Fernando Molina" press="handleUserItemPressed"/>-->
+	<!--	</u:user>-->
+	<!--	<u:paneContent>-->
+	<!--		<Text text="Lorem ipsum"/>-->
+	<!--	</u:paneContent>-->
+	<!--</u:Shell>-->
 	<tnt:ToolPage id="toolPage">
-<<<<<<< HEAD
-		<tnt:header>
-			<!--<OverflowToolbar id="toolbar">-->
-			<!--	<Button text="Accept" type="Accept"/>-->
-			<!--	<ToolbarSpacer/>-->
-			<!--	<CheckBox text="CheckBox"/>-->
-			<!--	<ToolbarSpacer/>-->
-			<!--	<Input width="100px" value="Input"/>-->
-			<!--	<ToolbarSpacer/>-->
-			<!--	<RadioButton text="RadioButton"/>-->
-			<!--	<ToolbarSpacer/>-->
-			<!--	<Button text="Reject" type="Reject"/>-->
-			<!--</OverflowToolbar>-->
-=======
+
 		<!--<tnt:header>
->>>>>>> refs/heads/carlos
 			<tnt:ToolHeader>
 				
 				<f:ShellBar homeIcon="../webapp/css/images/cbc-logo.png" showMenuButton="true" menuButtonPressed="onMenuButtonPress"></f:ShellBar>
