--- a/webapp/css/style.css
+++ b/webapp/css/style.css
@@ -48,11 +48,10 @@ html[dir="rtl"] .myAppDemoWT .myCustomButton.sapMBtn {
 	border: none !important;
 }
 
-.sapUiTableCell .sapMInputBaseContentWrapper{
+.sapUiTableCell .sapMInputBaseContentWrapper:not(.sapMInputBaseContentWrapperError){
 	border: none !important;
 }
 
 .sapUiTableCell .sapMInputBaseInner {
 	background: white !important;
 }
-
